--- a/assets/style.css
+++ b/assets/style.css
@@ -212,7 +212,8 @@ footer p a ion-icon:hover {
   text-align: left;
 }
 
-/*  */
+/* like button */
+
 #like {
   background-color: #03ab99;
   font-size: 10px;
