--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@
 /* header and banner */
 
 #main {
-  background-image: url("reynisfjara.png");
+  background-image: url("../images/reynisfjara.png");
 }
 
 #norway {
